--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           <div class="Mobile three">
             <input type="search" placeholder="buscar productos y servicios...">
           </div>
-          <div class="d-flex four"> <!--Carrito del bootstrap theme-->
+          <div class="d-flex four invisible"> <!--Carrito del bootstrap theme-->
             <a class="btn btn-outline-dark" type="submit" href="../pages/carrito.html">
                 <h9>Carrito</h9>
                 <p class="badge bg-dark text-white ms-1 rounded-pill" id="totalPrice" ></p>
